<resources>
    <string name="app_name">MediHelp</string>
    <string name="neutrophils">Neutrophils(%)</string>
    <string name="haemoglobin">Haemoglobin(g/dL)</string>
    <string name="rbc">Total RBC(Million/Cmm)</string>
    <string name="wbc">Total WBC(/Cmm)</string>
    <string name="insert_the_values_below">Insert The Values Below</string>
    <string name="rbc_red_blood_cells">RBC (Red Blood Cells)</string>
    <string name="hematocrit">Hematocrit</string>
    <string name="wbc_white_blood_cells">WBC (White Blood Cells)</string>
    <string name="lymphocytes">Lymphocytes(%)</string>
    <string name="monocytes">Monocytes(%)</string>
    <string name="eosinophils">Eosinophils(%)</string>
    <string name="basophils">Basophils(%)</string>
    <string name="platelet_count">Platelet Count(/Cmm)</string>
    <string name="submit">Submit</string>
    <string name="wbc_components">WBC Components</string>

    <string name="rbc_components">RBC Components</string>
    <string name="report_submit">Submit</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="symptoms">Symptoms</string>
    <string name="calculate_again">Calculate Again</string>
    <string name="medihelp">MediHelp</string>
    <string name="lab_test">Lab Test</string>
    <string name="buy_medicine">Buy Medicine</string>
    <string name="call_center">Call Center</string>
    <string name="your_profile">Your Profile</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="go_home">Go Home</string>
    <string name="blood_test">Blood Test</string>
    <string name="bilirubin_test">Bilirubin Test</string>
    <string name="logout">Logout</string>
    <string name="potential_diseases">Potential Diseases</string>
    <string name="please_input_all_fields">Please input all fields</string>
    <string name="error">Error!</string>
    <string name="field">Please fill all the fields!</string>
    <string name="ok">Ok</string>
    <string name="bilirubin_value">Bilirubin Value</string>
    <string name="mg_dl">mg/dL</string>
    <string name="insert_the_value_below">Insert The Value Below</string>
    <string name="diabetes_test">Diabetes Test</string>
    <string name="percentage">(%)</string>
    <string name="folic_acid">Folic Acid</string>
    <string name="medicine_icon">Medicine Icon</string>
    <string name="go_back">Go back</string>
</resources>