<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_the_values_below"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbc_red_blood_cells"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:autofillHints="" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rbc_components">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/totalRBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/rbc"
                    android:inputType=""
                    android:autofillHints=""
                    tools:ignore="InefficientWeight" />
                <EditText
                    android:id="@+id/haemoglobinEdtTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/haemoglobin"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="30dp"
                    android:autofillHints="" />

            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wbc_white_blood_cells"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:autofillHints="" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wbc_components">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/totalWBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/wbc"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/neutrophilsEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/neutrophils"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/lymphocytesEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lymphocytes"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/monocytesEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/monocytes"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/eosinophilsEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/eosinophils"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/basophilsEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/basophils"
                    android:inputType="numberDecimal"
                    android:autofillHints="" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/plateletEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/platelet_count"

            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"
            android:autofillHints="" />
        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="@dimen/_18sp"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="@dimen/_18sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_submit"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</ScrollView>

