<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/back2"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageUndrawmedical"
        android:layout_width="@dimen/_237pxh"
        android:layout_height="@dimen/_150pxh"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_65pxh"
        android:layout_marginEnd="@dimen/_65pxh"
        android:scaleType="fitXY"
        android:src="@drawable/img1"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_the_value_below"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bilirubin_value"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/black"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bilirubinValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/mg_dl"
                android:layout_gravity="center_horizontal"
                android:inputType=""
                android:autofillHints=""/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_submit"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>