<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/errorConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDialog"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/errorTitle"
        android:background="@drawable/error_bgd"
        android:text="@string/error"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/errorImage"
        android:src="@drawable/baseline_error_24"
        android:layout_marginEnd="8dp"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/errorTitle"
        app:layout_constraintBottom_toBottomOf="@+id/errorTitle"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTitle"/>

     </androidx.constraintlayout.widget.ConstraintLayout>


<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorButton"
        android:text="@string/ok"
        android:textSize="14sp"
        app:cornerRadius = "20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/layoutDialog"
        app:layout_constraintTop_toBottomOf="@+id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"/>







</androidx.constraintlayout.widget.ConstraintLayout>